# dbt-formula1-airflow

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: map_position_text.sql
dbt/models/staging/f1/: src_f1.yaml  stg_f1__circuits.sql  stg_f1__circuits.yml  stg_f1__constructor_results.sql  stg_f1__constructor_results.yml  stg_f1__constructor_standings.sql  stg_f1__constructor_standings.yml  stg_f1__constructors.sql  stg_f1__constructors.yml  stg_f1__driver_standings.sql  stg_f1__driver_standings.yml  stg_f1__drivers.sql  stg_f1__drivers.yml  stg_f1__lap_times.sql  stg_f1__lap_times.yml  stg_f1__pit_stops.sql  stg_f1__pit_stops.yml  stg_f1__qualifying.sql  stg_f1__qualifying.yml  stg_f1__races.sql  stg_f1__races.yml  stg_f1__results.sql  stg_f1__results.yml  stg_f1__seasons.sql  stg_f1__seasons.yml  stg_f1__sprint_results.sql  stg_f1__sprint_results.yml  stg_f1__status.sql  stg_f1__status.yml
orchestration/: .env  Dockerfile.airflow  Dockerfile.dbt  docker-compose.yaml  requirements.airflow.txt  requirements.txt
orchestration/dags/: f1_dbt.py  f1_dbt_cosmos.py
orchestration/scripts/: ingest_raw.py
