[project]
name = "dbt-formula1-airflow"
version = "0.1.0"
description = "Testing project for dbt orchestration via Airflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.8,<2.0",
    "dbt-duckdb>=1.8,<2.0",
    "duckdb>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1.0",
    "pytest>=8,<9",
]
