[project]
name = "dbt-formula1-airflow"
version = "0.1.0"
description = "Local DuckDB + dbt project for an F1 CSV dataset (uv-managed)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "dbt-core>=1.10,<2.0",
  "dbt-duckdb>=1.10,<2.0",
  "duckdb>=1.0,<2.0",
  "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
  "dbt-osmosis>=1.2.2",
  "ruff>=0.6,<1.0",
  "pytest>=8,<9",
  "sqlfluff>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["orchestrator/tests"]